--- a/Application/ClientApp/package.json
+++ b/Application/ClientApp/package.json
@@ -25,8 +25,10 @@
     "@angular/router": "^5.2.0",
     "@nguniversal/module-map-ngfactory-loader": "^5.0.0-beta.5",
     "aspnet-prerendering": "^3.0.1",
-    "bootstrap": "4.2.1",
+    "bootstrap": "^4.2.1",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
+    "ngx-bootstrap": "^3.1.4",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
